--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 			<img src="images/next.jpg">
 		</aside>
 
+		<div id="signup_form">
+			<form>
+				<input type="Email" name="" placeholder="Mobile Number of Email">
+				<input type="text" name="" placeholder="Full Name">
+				<input type="text" name="" placeholder="Username">
+				<input type="Password" name="" placeholder="Password">
+				<input type="date" name="">
+				<input type="submit" value="register">
+			</form>
+			
+		</div>
+
 		<div class="right_column">
 			<p>Have an account? Log In</p>
 		</div>
