looking dece all centred

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<div>
+	<div id="section">
 		<div class="left_column">
 			<img src="images/phone.jpg">
 		</div>
 
-		<aside class="right_column">
+		<aside class="right">
 			<div class="right_column">
 				<img src="images/instagram.jpg">
 				<p>Sign up to see photos and videos from your friends.</p>
@@ -37,15 +37,15 @@
 			</div>
 
 		</aside>
-
-		<div>
-			<footer class="footer">
-				<p>this</p>
-				<p>this</p>
-				<p>and this</p>
-			</footer>
-		</div>
 	</div>
 
+
+	<div>
+		<footer class="footer">
+			<p>this</p>
+			<p>this</p>
+			<p>and this</p>
+		</footer>
+	</div>
 </body>
 </html>
