--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
 				<p>Sign up to see photos and videos from your friends.</p>
 				<img src="images/login fb.jpg">
 				<p>OR</p>
+				<div id="signup_form">
+					<form>
+						<input type="Email" name="" placeholder="Mobile Number of Email">
+						<input type="text" name="" placeholder="Full Name">
+						<input type="text" name="" placeholder="Username">
+						<input type="Password" name="" placeholder="Password">
+						<input type="date" name="">
+						<input type="submit" value="register">
+					</form>
+				
+			</div>
 				<img src="images/next.jpg">
 			</div>
-			
+		
 
 			<div class="right_column">
 				<p>Have an account? Log In</p>
-			</div>
-
-			<div class="right_column" id="signup_form">
-				<form>
-					<input type="Email" name="" placeholder="Mobile Number of Email">
-					<input type="text" name="" placeholder="Full Name">
-					<input type="text" name="" placeholder="Username">
-					<input type="Password" name="" placeholder="Password">
-					<input type="date" name="">
-					<input type="submit" value="register">
-				</form>
-				
 			</div>
 
 		</aside>
