--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 						<input type="text" name="" placeholder="Full Name">
 						<input type="text" name="" placeholder="Username">
 						<input type="Password" name="" placeholder="Password">
-						<input type="date" name="">
-						<input type="submit" value="register">
 					</form>
 				
 			</div>
-				<img src="images/next.jpg">
+				<button class="next">
+					Next
+				</button>
 			</div>
 		
 
